# bevy-idol

./: .gitattributes  .gitignore  Cargo.toml  README.md
crates/bevy_idol/: Cargo.toml
crates/bevy_idol/assets/avatars/: demo.vrm
crates/bevy_idol/assets/meshes/: canonical_face_model.blend  canonical_face_model.dobj
crates/bevy_idol/assets/shaders/mtoon/: mtoon.wgsl  mtoon_bindings.wgsl  mtoon_functions.wgsl  mtoon_lighting.wgsl  mtoon_types.wgsl
crates/bevy_idol/src/: add_blend_shapes.rs  api.rs  cameras.rs  debug_mesh.rs  main.rs  output.rs  tracking.rs  virtual_camera.rs  webcam.rs
crates/bevy_vrm/: Cargo.toml  LICENSE  README.md
crates/bevy_vrm/src/: lib.rs  loader.rs
crates/bevy_vrm/src/extensions/: mod.rs  mtoon.rs  vrm.rs
crates/bevy_vrm/src/loader/: mod.rs  vertex_attributes.rs
crates/idol_api/: Cargo.toml
crates/idol_api/src/: lib.rs
