[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.86"
thiserror = "1.0.63"
bytes = "1.7.1"
nanoid = "0.4.0"
glam = "0.27.0"
base64 = "0.22.1"
serde = "1.0.177"
serde_json = "1.0.104"
percent-encoding = "2.3.0"
bitflags = "2.3.3"
clap = "4.3.19"
parking_lot = "0.12.1"
tokio = "1.29.1"
headers = "0.4.0"
gltf = "1.2.0"
bevy = "0.14.1"
bevy_egui = "0.28.0"
bevy-inspector-egui = "0.25.1"
bevy_gltf = "0.14.1"
bevy_obj = "0.14.0"
axum = "0.7.5"
axum-extra = "0.9.3"
axum-server = "0.7.1"
v4l = "0.14.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
