[package]
name = "bevy_idol"
description = "A piece of software for rendering VTuber avatars in realtime."
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bevy = "0.11.2"
bevy_vrm = { path = "../bevy_vrm" }
idol_api = { path = "../idol_api" }
bevy_obj = "0.11.0"
v4l = "0.14.0"
clap = { version = "4.3.19", features = ["derive"] }
anyhow = "1.0.72"
tracing-subscriber = "0.3.17"
log = "0.4.19"
parking_lot = "0.12.1"
tokio = { version = "1.29.1", features = ["rt-multi-thread"] }
axum = { version = "0.6.19", features = ["headers"] }
bytes = "1.4.0"
headers = "0.3.8"
bevy_egui = "0.21.0"
bevy-inspector-egui = "0.19.0"
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
