[package]
name = "bevy_idol"
description = "A piece of software for rendering VTuber avatars in realtime."
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bevy = { workspace = true }
bevy_vrm = { path = "../bevy_vrm" }
idol_api = { path = "../idol_api" }
bevy_obj = { workspace = true }
v4l = { workspace = true }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
axum = { workspace = true }
axum-extra = { workspace = true, features = ["typed-header"] }
axum-server = { workspace = true }
bytes = { workspace = true }
headers = { workspace = true }
bevy_egui = { workspace = true }
bevy-inspector-egui = { workspace = true, features = ["bevy_render"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
