[package]
name = "bevy_vrm"
description = "Bevy support for the VRM specification"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

[dependencies]
bevy = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
gltf = { workspace = true }
bevy_gltf = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
percent-encoding = { workspace = true }
bitflags = { workspace = true }
